--- a/AndroidManifest.xml
+++ b/AndroidManifest.xml
@@ -5,7 +5,7 @@
           android:versionName="1.0">
     <uses-sdk android:minSdkVersion="22"/>
     <application android:theme="@android:style/Theme.NoTitleBar">
-        <activity android:name="MyActivity"
+        <activity android:name=".Main"
                   android:theme="@android:style/Theme.NoTitleBar">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN"/>
