--- a/AndroidManifest.xml
+++ b/AndroidManifest.xml
@@ -20,6 +20,12 @@
                        android:value=".MainActivity"></meta-data>
         </activity>
 
+        <activity android:name=".HistoryActivity"
+                  android:theme="@android:style/Theme.NoTitleBar">
+            <meta-data android:name="android.support.PARENT_ACTIVITY"
+                       android:value=".MainActivity"></meta-data>
+        </activity>
+
         <activity android:name=".ExerciseChoosingActivity"
                   android:theme="@android:style/Theme.NoTitleBar">
             <meta-data android:name="android.support.PARENT_ACTIVITY"
