--- a/AndroidManifest.xml
+++ b/AndroidManifest.xml
@@ -63,5 +63,13 @@
                     android:value=".MainActivity"/>
         </activity>
 
+
+        <activity android:name=".TrainingStartingActivity"
+                  android:theme="@android:style/Theme.NoTitleBar">
+            <meta-data
+                    android:name="android.support.PARENT_ACTIVITY"
+                    android:value=".TrainingPreviewActivity"/>
+        </activity>
+
     </application>
 </manifest>
